# twitter_clone

./: .env.dist  .flake8  .gitignore  .gitlab-ci.yaml  .pre-commit-config.yaml  README.md  docker-compose.yaml  fabfile.py  pyproject.toml
client/: Dockerfile  nginx.conf
client/static/js/: app.ee2cdef2.js  app.ee2cdef2.js.map
etc/gitlab-runner/: config.toml
scripts/: custom-init.sh
server/: .coveragerc  Dockerfile  alembic.ini  database.py  entrypoint.sh  logger_config.py  main.py  models.py  schemas.py
server/migrations/: env.py
server/migrations/versions/: d2074b098e84_initial_revision.py
server/services/: base.py  service.py  utils.py
server/tests/: conftest.py  pytest.ini  test_integration.py
