[tool.poetry]
name = "twitter-messenger-clone"
version = "0.1.1"
description = ""
authors = ["Valerii Nataleev <valetnat91@mail.ru>"]
readme = "README.md"
packages = [
    {include = "server"},
    {include = "client"},
]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
python-multipart = "^0.0.13"
aiofile = "^3.9.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
pre-commit = "^3.8.0"
isort = "^5.13.2"
logging-tree = "^1.10"
pytest-cov = "^6.0.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-env = "^1.1.5"
pytest-asyncio = "^0.24.0"
asgi-lifespan = "^2.1.0"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 119

[tool.mypy]
strict = true
